# client28april

./: CMakeLists.txt  README.md  ca.crt  load_client_batch.cpp  load_client_single.cpp
data/shard_0/: IDENTITY  LOG  OPTIONS-000005
data/shard_1/: IDENTITY  LOG  OPTIONS-000005
data/shard_2/: IDENTITY  LOG  OPTIONS-000005
data/shard_3/: IDENTITY  LOG  OPTIONS-000005
data/shard_4/: IDENTITY  LOG  OPTIONS-000005
data/shard_5/: IDENTITY  LOG  OPTIONS-000005
data/shard_6/: IDENTITY  LOG  OPTIONS-000005
data/shard_7/: IDENTITY  LOG  OPTIONS-000005
examples/: benchmark_batch.cpp  benchmark_single.cpp
include/: kv_client.h
proto/: discovery.proto  kv.proto
src/: kv_client.cpp
